# cryptostockz-back/api/services/cryptostockz.service.js
@@ -19,175 +19,44 @@ const web3 = new Web3(ethereumUrl);
 const contract = new web3.eth.Contract(JSON.parse(ContractAbi), ContractAddress);
 
 
+const { Test, User } = require('../sequelize')
+
 /**
  * Return a list of registered lotteries.
  */
-async function getLotteries() {
-  let res = await contract.methods.getLotteries().call();
-  return { message: res };
+async function getTest() {
+  tests = Test.findAll();
+  return tests;
 }
 
-/**
- * Return all the information of the lottery corresponding to the given address.
- * @param {string} lotteryAddress address of the lottery
- */
-async function getLottery(lotteryAddress) {
-  let res = await contract.methods.getLottery().call();
-  return { message: res };
-}
-
-/**
- * Create a new lottery in the system. It returns the transactionHash,
- * address of the created lottery and address of the creator.
- * @param {string} privateKey private key of the operator (tx sender)
- * @param {object} lotteryData object with lottery parameters
- */
-async function createLottery(privateKey, lotteryData) {
-  const user = web3.eth.accounts.privateKeyToAccount(privateKey);
+async function createUser(userData) {
+  
   // Lottery data
   const {
-    maxNumberParticipants,
-    participationPrice,
-    participationPot,
-    prize,
-  } = lotteryData;
-  let res = await contract.methods.createLottery(
-      lotteryData.maxNumberParticipants, 
-      lotteryData.participationPrice, 
-      lotteryData.prize, 
-      lotteryData.participationPot)
-    .send(
-    {
-      from: user.address,
-      gasLimit: gasLimit,
-      gasPrice: gasPrice
-    });
-  return { message: res };
+    userName,
+    userPass,
+  } = userData;
+  res = User.create({username: userName, password: userPass});
+  console.log(res);
+  return res;
 }
 
-/**
- * Return a list of lottery's participants.
- * @param {string} lotteryAddress address of the lottery
- */
-async function getParticipants(lotteryAddress) {
-  let res = await contract.methods.getLotteryParticipants(lotteryAddress).call();
-  return { message: res };
-}
 
-/**
- * Allow to participate in a lottery. It returns the transactionHash,
- * address of the lottery and address of the participant.
- * @param {string} privateKey private key of the operator (tx sender)
- * @param {string} lotteryAddress address of the lottery
- */
-async function addParticipant(privateKey, lotteryAddress) {
-  const user = web3.eth.accounts.privateKeyToAccount(privateKey);
+async function getUserId(userData) {
+  
   // Lottery data
-  let cost = await contract.methods.getTicketCost(lotteryAddress).call();
-  console.log(cost);
-  let res = await contract.methods.addParticipant(
-    lotteryAddress)
-  .send(
-  {
-    from: user.address,
-    gasLimit: gasLimit,
-    gasPrice: gasPrice,
-    value: cost
-  });
-return { message: res };
-}
-
-/**
- * Allow a participant to withdraw its participation, ang get a refund.
- * It returns the transactionHash, address of the lottery and address
- * of the participant.
- * @param {string} privateKey private key of the operator (tx sender)
- * @param {string} lotteryAddress address of the lottery
- */
-async function withdrawParticipation(privateKey, lotteryAddress) {
-  const user = web3.eth.accounts.privateKeyToAccount(privateKey);
-  // Lottery data
-  let res = await contract.methods.withdrawParticipation(
-    lotteryAddress)
-  .send(
-  {
-    from: user.address,
-    gasLimit: gasLimit,
-    gasPrice: gasPrice
-  });
-return { message: res };
-}
-
-/**
- * Allow the creator of a lottery to raffle the prize between its
- * participants. It returns the transactionHash, address of the
- * lottery and the address of the winner.
- * @param {string} privateKey private key of the operator (tx sender)
- * @param {string} lotteryAddress address of the lottery
- */
-async function raffle(privateKey, lotteryAddress) {
-  const user = web3.eth.accounts.privateKeyToAccount(privateKey);
-  // Lottery data
-  let res = await contract.methods.rafflePrize(
-    lotteryAddress)
-  .send(
-  {
-    from: user.address,
-    gasLimit: gasLimit,
-    gasPrice: gasPrice
-  });
-return { message: res };
-}
-
-/**
- * Allows the owner of the contract to setup the internal conection
- * for the storage of the Dapp.
- * Also gives ownership of Storage contract to Service contract.
- * @param {string} lotteryStorageAddr 
- */
-async function setLotteryStorage(privateKey, lotteryStorageAddr) {
-  const user = web3.eth.accounts.privateKeyToAccount(privateKey);
-  // data
-  let res = await contract.methods.setLotteryStorage(lotteryStorageAddr)
-    .send(
-      {
-        from: user.address,
-        gasLimit: this.gasLimit,
-        gasPrice: this.gasPrice
-      });
-
-  console.log(lotteryStorageAddr);
-  return { message: res };
-}
-
-/**
- * Allows the owner of the contract to setup the address with the logic
- * of the Dapp
- * @param {string} lotteryInterfaceAddr 
- */
-async function setLotteryInterface(privateKey, lotteryInterfaceAddr) {
-  const user = web3.eth.accounts.privateKeyToAccount(privateKey);
-  // data
-  let res = await contract.methods.setLotteryLogic(lotteryInterfaceAddr)
-    .send(
-      {
-        from: user.address,
-        gasLimit: this.gasLimit,
-        gasPrice: this.gasPrice
-      });
-  console.log(lotteryInterfaceAddr);
-  return { message: res };
+  const {
+    userName,
+    userPass,
+  } = userData;
+  console.log(userData);
+  res = User.findOne({ where: {username: userName, password: userPass}});
+  return res;
 }
 
 
 module.exports = {
-  getLotteries,
-  getLottery,
-  createLottery,
-  getParticipants,
-  addParticipant,
-  withdrawParticipation,
-  raffle,
-  setLotteryStorage,
-  setLotteryInterface,
+  getTest,
+  createUser,
+  getUserId,
 };
